@@ -35,7 +35,7 @@ const assert = require('assert');
  */
 var procDataURI = ( uri ) => {
   assert(uri, 'uri is required');
-  let regex = /^data:[\S]+\/[\S]+;([\S]+),(.*)/;
+  let regex = /^data:(?:[\S]+\/[\S]+)?;([\S]+),(.*)/;
 
   let matches = uri.match(regex);
   let buffer;
